--- a/serenypals_frontend/pubspec.yaml
+++ b/serenypals_frontend/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   google_fonts: ^6.2.1
   http: ^1.4.0
   intl: ^0.20.2
+  image_picker: ^1.0.4
+  path_provider: ^2.1.1
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
