--- a/serenypals_frontend/pubspec.yaml
+++ b/serenypals_frontend/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   image_picker: ^1.0.4
   path_provider: ^2.1.1
   path: ^1.8.3
+  go_router: ^15.1.2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
