--- a/serenypals_frontend/pubspec.yaml
+++ b/serenypals_frontend/pubspec.yaml
@@ -42,6 +42,8 @@ flutter:
     - assets/img/sharingforum.svg
     - assets/img/close.svg
     - assets/img/Profile.svg
+    - assets/loading/Capybaratea.gif
+
 
 
     
