--- a/serenypals_frontend/pubspec.yaml
+++ b/serenypals_frontend/pubspec.yaml
@@ -27,4 +27,8 @@ flutter:
     - assets/img/gambarlogin1.png
     - assets/img/gambarlogin2.png
     - assets/img/gambarlogin3.png
+    - assets/img/diamond.png
+    - assets/img/capybara1.png
+    - assets/img/capybara2.png
+    - assets/img/capybara3.png
     
