--- a/serenypals_frontend/pubspec.yaml
+++ b/serenypals_frontend/pubspec.yaml
@@ -14,6 +14,12 @@ dependencies:
   google_fonts: ^6.2.1
   http: ^1.4.0
   intl: ^0.20.2
+  image_picker: ^1.0.4
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  go_router: ^15.1.2
+  shared_preferences: ^2.5.3
+  flutter_svg: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -27,8 +33,13 @@ flutter:
     - assets/img/gambarlogin1.png
     - assets/img/gambarlogin2.png
     - assets/img/gambarlogin3.png
-    - assets/img/diamond.png
-    - assets/img/capybara1.png
-    - assets/img/capybara2.png
-    - assets/img/capybara3.png
-    
+    - assets/img/ai.png
+    - assets/img/Dashboard.svg
+    - assets/img/Diary.svg
+    - assets/img/konsultasi.png
+    - assets/img/konsultasifab.png
+    - assets/img/premium.png
+    - assets/img/sharingforum.svg
+    - assets/img/close.svg
+    - assets/img/Profile.svg
+    - assets/loading/Capybaratea.gif
