--- a/serenypals_frontend/pubspec.yaml
+++ b/serenypals_frontend/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   go_router: ^15.1.2
   shared_preferences: ^2.5.3
   flutter_svg: ^2.1.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +48,8 @@ flutter:
     - assets/img/capybara2.png
     - assets/img/capybara3.png
     - assets/img/diamond.png
+    - assets/img/moodjournaling.png
+   
     - assets/loading/Capybaratea.gif
 
 
