--- a/serenypals_frontend/pubspec.yaml
+++ b/serenypals_frontend/pubspec.yaml
@@ -43,13 +43,13 @@ flutter:
     - assets/img/sharingforum.svg
     - assets/img/close.svg
     - assets/img/Profile.svg
+    - assets/img/chatadd.svg
     - assets/img/qris_dummy.png
     - assets/img/capybara1.png
     - assets/img/capybara2.png
     - assets/img/capybara3.png
     - assets/img/diamond.png
     - assets/img/moodjournaling.png
-   
     - assets/loading/Capybaratea.gif
 
 
