--- a/serenypals_frontend/pubspec.yaml
+++ b/serenypals_frontend/pubspec.yaml
@@ -21,12 +21,15 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_svg: ^2.1.0
   equatable: ^2.0.7
+  bloc_test: ^10.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
+  mockito: ^5.4.6
+  build_runner: ^2.4.15
+  
 flutter:
   uses-material-design: true
 
