--- a/serenypals_frontend/pubspec.yaml
+++ b/serenypals_frontend/pubspec.yaml
@@ -10,9 +10,11 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_bloc: ^9.1.1
   http: ^1.4.0
-  intl: ^0.20.2
+  intl: 0.19.0
   image_picker: ^1.0.4
   path_provider: ^2.1.1
   path: ^1.8.3
