--- a/serenypals_frontend/pubspec.yaml
+++ b/serenypals_frontend/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_svg: ^2.1.0
   equatable: ^2.0.7
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,7 @@ flutter:
     - assets/img/diamond.png
     - assets/img/moodjournaling.png
     - assets/loading/Capybaratea.gif
+    - assets/capybara.png
 
   
 
