--- a/serenypals_frontend/pubspec.yaml
+++ b/serenypals_frontend/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   flutter_svg: ^2.1.0
   equatable: ^2.0.7
   cupertino_icons: ^1.0.8 # Ikon Cupertino
+  firebase_core: ^2.28.0 # Versi terbaru saat ini
+  firebase_messaging: 14.7.10 # Versi terbaru saat ini
 
   # Dependensi dari pubspec Anda (provider dan audioplayers)
   # Menggunakan versi provider yang lebih tinggi jika ada perbedaan
